# data-analysis-agent

./: .env.example  .gitignore  AUTOMOTIVE_QUALITY_SUMMARY.md  AUTOMOTIVE_RANGES_UPDATE.md  CLI_REFACTORING_SUMMARY.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  README.md  README_ASYNC.md  REORGANIZATION_GUIDE.md  RESTRUCTURING_SUMMARY.md  TEST_FIXES_SUMMARY.md  agent.ipynb  async_full_run.py  async_main.py  automotive_quality_cli.py  coder.ipynb  coder.py  data_quality_assessment.py  dataframe_time.py  dataframe_to_dict.py  enhanced_automotive_report.json  enhanced_automotive_report.txt  full_run.ipynb  graph.ipynb  llm_pyodide_runner.html  main.py  node_pyodide_csv.js  paths.py  planner.ipynb  planner.py  planner_output.json  point_geom.py  pre_process.ipynb  prompts.py  pyodide_upload_csv_and_py.html  pyproject.toml  questions.ipynb  run_tests.py  setup_notebook_path.py  test_automotive_report.json  (+11 more)
.github/: copilot-instructions.md
data_analysis_agent/: AUTOMOTIVE_API_README.md  async_cli.py  automotive_data_quality.py  automotive_data_quality_api.py  build_signal_dictionary.py  cli.py  coder.py  data_quality_assessment.py  dataframe_to_dict.py  paths.py  planner.py  point_geom.py  prompts.py
notebooks/: coder.ipynb  graph.ipynb  planner.ipynb  quality.ipynb  questions.ipynb  report.json
src/: async_cli.py  planner.py
tests/: README.md  __init__.py  conftest.py  test_automotive_data_quality_api.py  test_automotive_quality.py  test_cli.py  test_enhanced_automotive_quality.py  test_paths.py  test_planner.py
tests/assets/: short-da-dev-labels.jsonl  short-da-dev-questions.jsonl
